--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "mocha": "^1.18.0",
     "gulp": "^3.5.6",
     "gulp-sass": "^0.7.1"
+  },
+  "repository" : { 
+    "type" : "git", 
+    "url" : "https://github.com/pauldambra/omniclopse"
   }
 }
