--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,6 @@
 {
   "name": "omniclopse",
   "dependencies": {
-    "bootstrap": "~3.1.1",
-    "ember": "~1.4.0",
-    "ember-data": "~0.0.14"
-  },
-  "resolutions": {
-    "ember": "~1.4.0"
+    "bootstrap": "~3.1.1"
   }
 }
