--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nightwatch": "^0.4.7",
     "gulp-ember-handlebars": "~0.6.0",
     "gulp-concat": "~2.2.0",
-    "gulp-uglify": "~0.2.1"
+    "gulp-uglify": "~0.2.1",
+    "should": "^3.3.0"
   },
   "repository": {
     "type": "git",
