--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bcrypt": "^0.7.7",
     "nomnom": "^1.6.2",
     "connect-flash": "^0.1.1",
-    "bluebird": "^1.2.4",
+    "bluebird": ">1",
     "hbs": "^2.6.0"
   },
   "devDependencies": {
